--- a/mwui-stencil/src/components/mw-chip-input/mw-chip-input.scss
+++ b/mwui-stencil/src/components/mw-chip-input/mw-chip-input.scss
@@ -9,6 +9,7 @@
   display: inline-flex;
   flex-direction: column;
   width: 100%;
+  gap: var(--mw-component-text-field-gap-group-vertical);
 }
 
 .chip-input {
