--- a/mwui-stencil/src/components/mw-dropdown/mw-dropdown.scss
+++ b/mwui-stencil/src/components/mw-dropdown/mw-dropdown.scss
@@ -8,6 +8,7 @@
 .wrapper {
   display: inline-flex;
   flex-direction: column;
+  gap: var(--mw-component-text-field-gap-group-vertical);
 }
 
 .dropdown {
@@ -39,8 +40,4 @@
       color: var(--mw-component-text-field-fg-placeholder);
     }
   }
-}
-
-.has-error {
-  color: var(--mw-component-text-field-fg-error);
 }
